--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -3,33 +3,33 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-12">
-      <h1>Login</h1>
-      <p>Accounts are reset on server restart from <code>server/config/seed.js</code>. Default account is <code>test@test.com</code> / <code>test</code></p>
-      <p>Admin account is <code>admin@admin.com</code> / <code>admin</code></p>
+      <h1>Login</h1><br><br>
+      <!-- <p>Accounts are reset on server restart from <code>server/config/seed.js</code>. Default account is <code>test@test.com</code> / <code>test</code></p>
+      <p>Admin account is <code>admin@admin.com</code> / <code>admin</code></p> -->
     </div>
     <div class="col-sm-12">
       <form class="form" name="form" ng-submit="login(form)" novalidate>
 
         <div class="form-group">
-          <label>Email</label>
+          <label>Roll No.</label>
 
-          <input type="email" name="email" class="form-control" ng-model="user.email" required>
+          <input type="email" name="roll_no" class="form-control" ng-model="user.roll_no" required><br>
         </div>
 
         <div class="form-group">
-          <label>Password</label>
+          <label>LDAP Password</label>
 
           <input type="password" name="password" class="form-control" ng-model="user.password" required>
         </div>
 
         <div class="form-group has-error">
-          <p class="help-block" ng-show="form.email.$error.required && form.password.$error.required && submitted">
-             Please enter your email and password.
+          <p class="help-block" ng-show="form.roll_no.$error.required && form.password.$error.required && submitted">
+             Please enter your roll_no and LDAP password.
           </p>
-          <p class="help-block" ng-show="form.email.$error.email && submitted">
+          <!-- <p class="help-block" ng-show="form.email.$error.email && submitted">
              Please enter a valid email.
           </p>
-
+ -->
           <p class="help-block">{{ errors.other }}</p>
         </div>
 
@@ -37,9 +37,9 @@
           <button class="btn btn-inverse btn-lg btn-login" type="submit">
             Login
           </button>
-          <a class="btn btn-default btn-lg btn-register" href="/signup">
+         <!--  <a class="btn btn-default btn-lg btn-register" href="/signup">
             Register
-          </a>
+          </a> -->
         </div>
 
         <hr>
