--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -1,61 +1,51 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
 
-<div class="container">
-  <div class="row">
-    <div class="col-sm-12">
-      <h1>Login</h1><br><br>
-      <!-- <p>Accounts are reset on server restart from <code>server/config/seed.js</code>. Default account is <code>test@test.com</code> / <code>test</code></p>
-      <p>Admin account is <code>admin@admin.com</code> / <code>admin</code></p> -->
-    </div>
-    <div class="col-sm-12">
-      <form class="form" name="form" ng-submit="login(form)" novalidate>
+<div class="account">
+  <div class="makeCenter">
+    <div class="md-whiteframe-z3">
 
-        <div class="form-group">
-          <label>Roll No.</label>
+      <md-toolbar class="md-primary">
+        <h1 class="md-toolbar-tools">
+          Login
+        </h1>
+      </md-toolbar>
 
-          <input type="email" name="roll_no" class="form-control" ng-model="user.roll_no" required><br>
-        </div>
+      <md-content layout-padding>
+        <form class="form" name="form" ng-submit="login(form)" novalidate>
 
-        <div class="form-group">
-          <label>LDAP Password</label>
+          <md-input-container>
+            <label>Roll No:</label>
 
-          <input type="password" name="password" class="form-control" ng-model="user.password" required>
-        </div>
+            <input type="text" name="roll_no" ng-model="user.roll_no" required>
+          </md-input-container>
 
-        <div class="form-group has-error">
-          <p class="help-block" ng-show="form.roll_no.$error.required && form.password.$error.required && submitted">
-             Please enter your roll_no and LDAP password.
-          </p>
-          <!-- <p class="help-block" ng-show="form.email.$error.email && submitted">
-             Please enter a valid email.
-          </p>
- -->
-          <p class="help-block">{{ errors.other }}</p>
-        </div>
+          <md-input-container>
+            <label>Password</label>
 
-        <div>
-          <button class="btn btn-inverse btn-lg btn-login" type="submit">
-            Login
-          </button>
-         <!--  <a class="btn btn-default btn-lg btn-register" href="/signup">
-            Register
-          </a> -->
-        </div>
+            <input type="password" name="password" ng-model="user.password" required>
+          </md-input-container>
 
-        <hr>
-        <div>
-          <a class="btn btn-facebook" href="" ng-click="loginOauth('facebook')">
-            <i class="fa fa-facebook"></i> Connect with Facebook
-          </a>
-          <a class="btn btn-google-plus" href="" ng-click="loginOauth('google')">
-            <i class="fa fa-google-plus"></i> Connect with Google+
-          </a>
-          <a class="btn btn-twitter" href="" ng-click="loginOauth('twitter')">
-            <i class="fa fa-twitter"></i> Connect with Twitter
-          </a>
-        </div>
-      </form>
+          <div style="color:red">
+            <span ng-show="form.roll_no.$error.required && form.password.$error.required && submitted">
+              Please enter your roll no. and password.
+            </span>
+            
+            <span>{{ errors.other }}</sapn>
+          </div>
+
+          <div>
+            <md-button class="md-raised md-primary" type="submit">
+              Login
+            </md-button>
+          </div>
+
+        </form>
+      </md-content>
+
     </div>
   </div>
-  <hr>
 </div>
+
+
+
+
