--- a/client/index.html
+++ b/client/index.html
@@ -23,6 +23,7 @@
       <link rel="stylesheet" href="app/admin/admin.css">
       <link rel="stylesheet" href="app/app.css">
       <link rel="stylesheet" href="app/main/main.css">
+      <link rel="stylesheet" href="app/schedule/schedule.css">
       <link rel="stylesheet" href="app/scoreboard/scoreboard.css">
       <link rel="stylesheet" href="components/modal/modal.css">
       <!-- endinjector -->
@@ -80,6 +81,8 @@
           <script src="app/admin/admin.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
+          <script src="app/schedule/schedule.controller.js"></script>
+          <script src="app/schedule/schedule.js"></script>
           <script src="app/scoreboard/scoreboard.controller.js"></script>
           <script src="app/scoreboard/scoreboard.js"></script>
           <script src="components/auth/auth.service.js"></script>
