--- a/client/index.html
+++ b/client/index.html
@@ -22,9 +22,11 @@
       <!-- injector:css -->
       <link rel="stylesheet" href="app/admin/admin.css">
       <link rel="stylesheet" href="app/app.css">
+      <link rel="stylesheet" href="app/clubs/clubs.css">
       <link rel="stylesheet" href="app/main/main.css">
       <link rel="stylesheet" href="app/schedule/schedule.css">
       <link rel="stylesheet" href="app/scoreboard/scoreboard.css">
+      <link rel="stylesheet" href="app/subscribed_clubs/subscribed_clubs.css">
       <link rel="stylesheet" href="components/modal/modal.css">
       <!-- endinjector -->
     <!-- endbuild -->
@@ -79,12 +81,16 @@
           <script src="app/account/settings/settings.controller.js"></script>
           <script src="app/admin/admin.controller.js"></script>
           <script src="app/admin/admin.js"></script>
+          <script src="app/clubs/clubs.controller.js"></script>
+          <script src="app/clubs/clubs.js"></script>
           <script src="app/main/main.controller.js"></script>
           <script src="app/main/main.js"></script>
           <script src="app/schedule/schedule.controller.js"></script>
           <script src="app/schedule/schedule.js"></script>
           <script src="app/scoreboard/scoreboard.controller.js"></script>
           <script src="app/scoreboard/scoreboard.js"></script>
+          <script src="app/subscribed_clubs/subscribed_clubs.controller.js"></script>
+          <script src="app/subscribed_clubs/subscribed_clubs.js"></script>
           <script src="components/auth/auth.service.js"></script>
           <script src="components/auth/user.service.js"></script>
           <script src="components/modal/modal.service.js"></script>
