--- a/client/app/account/login/login.html
+++ b/client/app/account/login/login.html
@@ -1,5 +1,5 @@
 <div ng-include="'components/navbar/navbar.html'"></div>
-
+<div class="col-md-6 col-md-offset-3">
 <div class="account">
   <div class="makeCenter">
     <div class="md-whiteframe-z3">
@@ -10,27 +10,26 @@
         </h1>
       </md-toolbar>
 
-      <md-content layout-padding>
         <form class="form" name="form" ng-submit="login(form)" novalidate>
 
           <md-input-container>
-            <label>Roll No:</label>
+            <label>Roll No</label>
 
-            <input type="text" name="roll_no" ng-model="user.roll_no" required>
+            <input name="rollNo" ng-model="user.rollNo" required/>
           </md-input-container>
 
           <md-input-container>
             <label>Password</label>
 
-            <input type="password" name="password" ng-model="user.password" required>
+            <input type="password" name="password" ng-model="user.password" required/>
           </md-input-container>
 
           <div style="color:red">
-            <span ng-show="form.roll_no.$error.required && form.password.$error.required && submitted">
+            <span ng-show="(form.rollNo.$error.required || form.password.$error.required) && submitted">
               Please enter your roll no. and password.
             </span>
             
-            <span>{{ errors.other }}</sapn>
+            <span>{{ errors.other }}</span>
           </div>
 
           <div>
@@ -40,12 +39,12 @@
           </div>
 
         </form>
-      </md-content>
+         
 
     </div>
   </div>
 </div>
-
+</div>
 
 
 
