changed updatedOn and hostel in refresh api

--- a/client/index.html
+++ b/client/index.html
@@ -4,12 +4,16 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
   <head>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <base href="/">
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
+      <script type="text/javascript">
+        window.location="http://m.litsoc.saarang.org/";
+      </script>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(client) app/vendor.css -->
       <!-- bower:css -->
@@ -26,6 +30,8 @@
       <link rel="stylesheet" href="components/modal/modal.css">
       <!-- endinjector -->
     <!-- endbuild -->
+
+
   </head>
   <body ng-app="instieventsportalApp">
     <!--[if lt IE 7]>
